Labs/Lab 1/Lab1_Code.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. All rights reserved.

Install the latest PowerShell for new features and improvements! https://aka.ms/PSWindows

PS C:\Users\Luke> python3
PS C:\Users\Luke> python3
Python 3.11.5 (tags/v3.11.5:cce6ba9, Aug 24 2023, 14:38:34) [MSC v.1936 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> x = [1, 2, 3]
>>> x*3
[1, 2, 3, 1, 2, 3, 1, 2, 3]
>>> import numpy as np
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'numpy'
>>> pip3 install numpy
  File "<stdin>", line 1
    pip3 install numpy
         ^^^^^^^
SyntaxError: invalid syntax
>>> pip3 instal numpy
  File "<stdin>", line 1
    pip3 instal numpy
         ^^^^^^
SyntaxError: invalid syntax
>>> python3 -m pip install numpy
  File "<stdin>", line 1
    python3 -m pip install numpy
               ^^^
SyntaxError: invalid syntax
>>> pip install numpy
  File "<stdin>", line 1
    pip install numpy
        ^^^^^^^
SyntaxError: invalid syntax
>>> exit()
PS C:\Users\Luke> pip3 install numpy
Collecting numpy
  Obtaining dependency information for numpy from https://files.pythonhosted.org/packages/72/b2/02770e60c4e2f7e158d923ab0dea4e9f146a2dbf267fec6d8dc61d475689/numpy-1.25.2-cp311-cp311-win_amd64.whl.metadata
  Downloading numpy-1.25.2-cp311-cp311-win_amd64.whl.metadata (5.7 kB)
Downloading numpy-1.25.2-cp311-cp311-win_amd64.whl (15.5 MB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 15.5/15.5 MB 13.1 MB/s eta 0:00:00
Installing collected packages: numpy
  WARNING: The script f2py.exe is installed in 'C:\Users\Luke\AppData\Local\Packages\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\LocalCache\local-packages\Python311\Scripts' which is not on PATH.
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
Successfully installed numpy-1.25.2
PS C:\Users\Luke> pip3 install mathplotlib
ERROR: Could not find a version that satisfies the requirement mathplotlib (from versions: none)
ERROR: No matching distribution found for mathplotlib
PS C:\Users\Luke> pip3 install matplotlib
Collecting matplotlib
  Obtaining dependency information for matplotlib from https://files.pythonhosted.org/packages/4d/9c/65830d4a56c47f5283eaa244dc1228c5da9c844a9f999ebcc2e69bf6cc65/matplotlib-3.7.2-cp311-cp311-win_amd64.whl.metadata
  Downloading matplotlib-3.7.2-cp311-cp311-win_amd64.whl.metadata (5.8 kB)
Collecting contourpy>=1.0.1 (from matplotlib)
  Obtaining dependency information for contourpy>=1.0.1 from https://files.pythonhosted.org/packages/16/09/989b982322439faa4bafffcd669e6f942b38fee897c2664c987bcd091dec/contourpy-1.1.0-cp311-cp311-win_amd64.whl.metadata
  Downloading contourpy-1.1.0-cp311-cp311-win_amd64.whl.metadata (5.7 kB)
Collecting cycler>=0.10 (from matplotlib)
  Downloading cycler-0.11.0-py3-none-any.whl (6.4 kB)
Collecting fonttools>=4.22.0 (from matplotlib)
  Obtaining dependency information for fonttools>=4.22.0 from https://files.pythonhosted.org/packages/95/b6/9a5133deb5838c4dbe3ea27e8dba123622aa5112d43a079e9587636b4faf/fonttools-4.42.1-cp311-cp311-win_amd64.whl.metadata
  Downloading fonttools-4.42.1-cp311-cp311-win_amd64.whl.metadata (154 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 154.1/154.1 kB 1.5 MB/s eta 0:00:00
Collecting kiwisolver>=1.0.1 (from matplotlib)
  Obtaining dependency information for kiwisolver>=1.0.1 from https://files.pythonhosted.org/packages/1e/37/d3c2d4ba2719059a0f12730947bbe1ad5ee8bff89e8c35319dcb2c9ddb4c/kiwisolver-1.4.5-cp311-cp311-win_amd64.whl.metadata
  Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl.metadata (6.5 kB)
Requirement already satisfied: numpy>=1.20 in c:\users\luke\appdata\local\packages\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\localcache\local-packages\python311\site-packages (from matplotlib) (1.25.2)
Collecting packaging>=20.0 (from matplotlib)
  Downloading packaging-23.1-py3-none-any.whl (48 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 48.9/48.9 kB 2.4 MB/s eta 0:00:00
Collecting pillow>=6.2.0 (from matplotlib)
  Obtaining dependency information for pillow>=6.2.0 from https://files.pythonhosted.org/packages/66/d4/054e491f0880bf0119ee79cdc03264e01d5732e06c454da8c69b83a7c8f2/Pillow-10.0.0-cp311-cp311-win_amd64.whl.metadata
  Downloading Pillow-10.0.0-cp311-cp311-win_amd64.whl.metadata (9.6 kB)
Collecting pyparsing<3.1,>=2.3.1 (from matplotlib)
  Downloading pyparsing-3.0.9-py3-none-any.whl (98 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 98.3/98.3 kB ? eta 0:00:00
Collecting python-dateutil>=2.7 (from matplotlib)
  Downloading python_dateutil-2.8.2-py2.py3-none-any.whl (247 kB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 247.7/247.7 kB 7.7 MB/s eta 0:00:00
Collecting six>=1.5 (from python-dateutil>=2.7->matplotlib)
  Downloading six-1.16.0-py2.py3-none-any.whl (11 kB)
Downloading matplotlib-3.7.2-cp311-cp311-win_amd64.whl (7.5 MB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 7.5/7.5 MB 13.0 MB/s eta 0:00:00
Downloading contourpy-1.1.0-cp311-cp311-win_amd64.whl (470 kB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 470.9/470.9 kB 14.9 MB/s eta 0:00:00
Downloading fonttools-4.42.1-cp311-cp311-win_amd64.whl (2.1 MB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2.1/2.1 MB 13.5 MB/s eta 0:00:00
Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl (56 kB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 56.1/56.1 kB ? eta 0:00:00
Downloading Pillow-10.0.0-cp311-cp311-win_amd64.whl (2.5 MB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2.5/2.5 MB 14.6 MB/s eta 0:00:00
Installing collected packages: six, pyparsing, pillow, packaging, kiwisolver, fonttools, cycler, contourpy, python-dateutil, matplotlib
  WARNING: The scripts fonttools.exe, pyftmerge.exe, pyftsubset.exe and ttx.exe are installed in 'C:\Users\Luke\AppData\Local\Packages\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\LocalCache\local-packages\Python311\Scripts' which is not on PATH.
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
Successfully installed contourpy-1.1.0 cycler-0.11.0 fonttools-4.42.1 kiwisolver-1.4.5 matplotlib-3.7.2 packaging-23.1 pillow-10.0.0 pyparsing-3.0.9 python-dateutil-2.8.2 six-1.16.0
PS C:\Users\Luke> python3
Python 3.11.5 (tags/v3.11.5:cce6ba9, Aug 24 2023, 14:38:34) [MSC v.1936 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> y = np.array([1, 2, 3])
>>> y*3
array([3, 6, 9])
>>> print('this is 3y', 3*y)
this is 3y [3 6 9]
>>> print('this is 3y:', 3*y)
this is 3y: [3 6 9]
>>> import matplotlib.pyplot as plt
>>> X = np.linspace(0, 2 * np.pi, 100)
>>> Ya = np.sin(X)
>>> Yb = np.cos(X)
>>> plt.plot(X, Ya)
[<matplotlib.lines.Line2D object at 0x000002BC57007010>]
>>> plt.plot(X, Yb)
[<matplotlib.lines.Line2D object at 0x000002BC57007810>]
>>> plt.show()
>>> X = np.linspace(0, 2 * np.pi, 100)
>>> Ya = np.sin(X)
>>> Yb = np.cos(X)
>>> plt.plot(X, Ya)
[<matplotlib.lines.Line2D object at 0x000002BC5701B6D0>]
>>> plt.plot(X, Yb)
[<matplotlib.lines.Line2D object at 0x000002BC57036190>]
>>> plt.xlabel(’x’)
  File "<stdin>", line 1
    plt.xlabel(’x’)
               ^
SyntaxError: invalid character '’' (U+2019)
>>> plt.ylabel(’y’)
  File "<stdin>", line 1
    plt.ylabel(’y’)
               ^
SyntaxError: invalid character '’' (U+2019)
>>> plt.xlabel('x')
Text(0.5, 0, 'x')
>>> plt.ylabel('y')
Text(0, 0.5, 'y')
>>> plt.ylabel('y')
Text(0, 0.5, 'y')
>>> plt.show()
>>> x = np.linspace(1,10,10)
>>> print(x)
[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
>>> y = np.arange(10, 20, 1)
>>> print(x)
[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
>>> print(y)
[10 11 12 13 14 15 16 17 18 19]
>>> xfirst3 = x[1:3]
>>> print(xfirst3)
[2. 3.]
>>> xfirst3 = x[0:3]
>>> print(xfirst3)
[1. 2. 3.]
>>> print('the first 3 entries of x are:', xfirst3)
the first 3 entries of x are: [1. 2. 3.]
>>> xone = x[1]
>>> print(xone)
2.0
>>> xzero = x[0]
>>> xtwo = x[2]
>>> print('the first 3 entries of x are:', xzero, xone, xtwo)
the first 3 entries of x are: 1.0 2.0 3.0
>>> w = 10**(-np.linspace(1,10,10))
>>> print(w)
[1.e-01 1.e-02 1.e-03 1.e-04 1.e-05 1.e-06 1.e-07 1.e-08 1.e-09 1.e-10]
>>> z = np.linspace(1, 10, 10)
>>> print(z)
[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]
>>> x = z
>>> plt.plot(x, w)
[<matplotlib.lines.Line2D object at 0x000002BC5CFD7B10>]
>>> plt.xlabel('x')
Text(0.5, 0, 'x')
>>> plt.ylabel('w')
Text(0, 0.5, 'w')
>>> plt.show()
>>> s = 3*w
>>> plt.plot(x, s)
[<matplotlib.lines.Line2D object at 0x000002BC5D04AE50>]
>>> plt.ylabel('w/y')
Text(0, 0.5, 'w/y')
>>> plt.show
<function show at 0x000002BC54D74680>
>>> plt.show()
>>> plt.plot(x, w)
[<matplotlib.lines.Line2D object at 0x000002BC5D1C8F10>]
>>> plt.plot(x, s)
[<matplotlib.lines.Line2D object at 0x000002BC5D1C96D0>]
>>> plt.xlabel('x')
Text(0.5, 0, 'x')
>>> plt.ylabel('w/y')
Text(0, 0.5, 'w/y')
>>> plt.show()
>>> exit()
PS C:\Users\Luke> python3 testDot.py
C:\Users\Luke\AppData\Local\Microsoft\WindowsApps\python3.exe: can't open file 'C:\\Users\\Luke\\testDot.py': [Errno 2] No such file or directory
PS C:\Users\Luke>